force-app/main/default/objects/HAM_Proposal_or_PG_Designation__c/HAM_Proposal_or_PG_Designation__c.object-meta.xml
<CustomObject>
    <label>Proposal or PG Designation</label>
    <nameField>
        <displayFormat>PPD-{000000}</displayFormat>
        <label>Proposal or PG Designation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal or PG Designations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>