force-app/main/default/objects/HAM_Proposal_or_PG_Designation__c/fields/HAM_Amount__c.field-meta.xml
<CustomField>
    <fullName>HAM_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>