force-app/main/default/objects/HAM_Proposal_or_PG_Designation__c/fields/HAM_Designation__c.field-meta.xml
<CustomField>
    <fullName>HAM_Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Proposal or PG Designations</relationshipLabel>
    <relationshipName>Proposal_or_PG_Designations</relationshipName>
    <type>Lookup</type>
</CustomField>