force-app/main/default/objects/HAM_Proposal_or_PG_Designation__c/fields/HAM_Proposal_or_PG__c.field-meta.xml
<CustomField>
    <fullName>HAM_Proposal_or_PG__c</fullName>
    <label>Proposal or PG</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Proposal or PG Designations</relationshipLabel>
    <relationshipName>Proposal_or_PG_Designations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>